Modify frontend, add prettier for formatting

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-import Chat from "../components/Chat";
+import React from "react";
+import App from "../components/App";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body class="flex flex-col items-center justify-center w-screen min-h-screen bg-gray-700 text-white p-10">
-		<Chat client:only="react" />
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body
+    class="flex flex-col items-center justify-center w-screen min-h-screen bg-gray-700 text-white p-10"
+  >
+    <App client:only="react" />
+  </body>
 </html>
