add dashboard to frontend, use snapstart for vectorsearch lambda

--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import Footer from "../components/Footer.astro";
   <body>
     <Header />
     <main
-      class="flex flex-col w-screen min-h-screen bg-gray-100 text-white p-10 flex-grow"
+      class="flex flex-col w-screen min-h-screen bg-gray-100 text-white flex-grow"
     >
       <slot />
     </main>
